# eosio.forum

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DESIGN.md  README-cn.md  README.md  build.sh  forum-post-rc.md  forum-remove-rc.md  forum-vote-rc.md  forum.abi  forum.cpp  forum.wasm  run.sh  stop.sh  tests.sh
abi/: expire.md  forum-clean-proposal.md  forum-post-rc.md  forum-propose.md  forum-unvote.md  forum-vote-rc.md  forum-vote.md  forum.abi  forum.clnproposal_rc.md  forum.expire_rc.md  forum.post_rc.md  forum.propose_rc.md  forum.status_rc.md  forum.unpost_rc.md  forum.unvote_rc.md  forum.vote_rc.md  forum_rc.md
deploy/: 000-create-forum-account-and-deploy.json  001-create-account.json  002-deploy-forum.json  auth-eosio.forum.yaml
deploy/mainnet/: approforum1.json  (+2 more)
include/: forum.hpp
resources/: forum.clauses.md  forum.contracts.md
scripts/: README.md  voter_key.cpp
src/: forum.cpp  forum.hpp
tests/: .gitignore  README.md  all.sh  boot.sh  boot_sequence.yaml  cleanvotes_validates_correctly.sh  cleanvotes_working.sh  clnproposal_validates_correctly.sh  clnproposal_working.sh  config.ini  data.sh  eosc-vault.json  expire_validates_correctly.sh  expire_working.sh  genesis.json  genesis.key  genesis.pub  library.sh  post_validates_correctly.sh  proposal_requires_proposer_auth.sh  proposal_unique_by_proposer.sh  proposal_working.sh  propose_unique_by_proposer.sh  propose_validates_correctly.sh  propose_working.sh  unpost_validates_correctly.sh  unpropose_requires_proposer_auth.sh  unpropose_validates_correctly.sh  unpropose_working.sh  unvote_validates_correctly.sh  unvote_working.sh  vote_requires_voter_auth.sh  vote_unique_by_proposer.sh  vote_validates_correctly.sh  vote_working.sh
(+5 files in other folders)
